tests/NormalTests/paczka1/small_fuzzy/33191115.err
Error in line 6: im3pjei A440 148,3
Error in line 1: bMll9Q A366 62,4
Error in line 4: mc63kV S498 54,6
Error in line 11: S301 A366 121,5
